diplom_project/vpc.tf
resource "aws_vpc" "ermolaeva_vpc" {
 cidr_block = "10.0.0.0/16"
	
 tags = {
  Name = "ermolaeva_vpc"
 }
}
